# API

./: .gitignore  DEPLOYMENT.md  Dockerfile  INSTALLATION.md  LICENSE  PACKAGE.md  QUICKSTART.md  README.md  client.py  crud.py  database.py  docker-compose.yml  environments.env  environments.env.example  equipment_records.py  incidents.py  index.html  install_output.txt  main.py  models.py  pyproject.toml  requirements.txt  restricted_zones.py  run_server.bat  run_server.ps1  run_server.sh  run_server_offline.bat  run_server_offline.ps1  run_server_offline.sh  safety_equipment.py  safety_monitoring.db  schemas.py  setup.py  workers.py
